--- a/index.html
+++ b/index.html
@@ -27,7 +27,41 @@
         </div>
     </nav>
     <div class="container main-container">
-        <div class="row row-header"></div>
+        <div class="row row-header">
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="rss/caption1.jpg" class="d-block w-100 img-fluid" alt="caption1">
+                <div class="carousel-caption d-none d-md-block bg-success">
+                  <h3>Best Places to visit</h3>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="rss/caption2.jpg" class="d-block w-100 img-fluid" alt="caption2">
+                <div class="carousel-caption d-none d-md-block bg-success">
+                  <h3>Value for Money</h3>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="rss/caption3.jpg" class="d-block w-100 img-fluid" alt="caption3">
+                <div class="carousel-caption d-none d-md-block bg-success">
+                  <h3>Epic Places</h3>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </button>
+          </div>
+        </div>
         <div class="row row-content">
             <div class="card mb-3">
                 <div class="row g-0">
