--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="rss/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>PLACES TO VISIT</title>
+    <title>Wonders of the world</title>
 </head>
 <body>
   <nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
