--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>Wonders of the world</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-sm navColor fixed-top">
         <div class="container-fluid">
             <button class ="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="index.html" class="navbar-brand mr-auto"><img src="rss/icon.jpg" alt="logo" height="40px" width="100px"></a>
+            <a href="index.html" class="navbar-brand mr-auto py-2"><img src="rss/icon.jpg" alt="logo" height="40px" width="100px"></a>
             <div class="collapse navbar-collapse custom-nav" id="Navbar">
                 <ul class ="navbar-nav mr-auto me-auto">
                     <li class="nav-item active"><a href="index.html" class="nav-link active">Home</a></li>
@@ -26,47 +26,48 @@
             </div>
         </div>
     </nav>
-    <div class="container main-container">
-        <div class="row row-header">
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="container-fluid">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://source.unsplash.com/1400x500/?map,world" class="d-block w-100 img-fluid" alt="caption1">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Best Places to visit</h3>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://source.unsplash.com/1400x500/?map,world" class="d-block w-100 img-fluid" alt="caption1">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3>Best Places to visit</h3>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://source.unsplash.com/1400x500/?money,network" class="d-block w-100 img-fluid" alt="caption2">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3>Value for Money</h3>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://source.unsplash.com/1400x500/?places,ancient" class="d-block w-100 img-fluid" alt="caption3">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3>Epic Places</h3>
-                </div>
-              </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://source.unsplash.com/1400x500/?money,network" class="d-block w-100 img-fluid" alt="caption2">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Value for Money</h3>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </button>
+          </div>
+          <div class="carousel-item">
+            <img src="https://source.unsplash.com/1400x500/?places,ancient" class="d-block w-100 img-fluid" alt="caption3">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Epic Places</h3>
+            </div>
           </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
+      </div>
+    </div>
+    <div class="container main-container">
+        
         <div class="row row-content">
-            <div class="card mb-3">
+            <div class="card mb-3 cardColor cardColor">
                 <div class="row g-0">
                   <div class="col-lg-8">
-                    <img src="rss/great-wall-of-china.jpg" class="img-fluid rounded-start" alt="great-wall-of-china">
+                    <img src="rss/great-wall-of-china.jpg" class="img-fluid imgBox" alt="great-wall-of-china">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
@@ -78,25 +79,25 @@
               </div>
         </div>
         <div class="row row-content">
-            <div class="card mb-3">
+            <div class="card mb-3 cardColor">
                 <div class="row g-0">
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
                       <h2 class="card-title"><strong>Chichén Itzá</strong></h2>
-                      <p class="card-text">hichén Itzá is a Mayan city on the Yucatán Peninsula in Mexico, which flourished in the 9th and 10th centuries CE. Under the Mayan tribe Itzá—who were strongly influenced by the Toltecs—a number of important monuments and temples were built. Among the most notable is the stepped pyramid El Castillo (“The Castle”), which rises 79 feet (24 meters) above the Main Plaza. A testament to the Mayans’ astronomical abilities, the structure features a total of 365 steps, the number of days in the solar year. During the spring and autumnal equinoxes, the setting sun casts shadows on the pyramid that give the appearance of a serpent slithering down the north stairway; at the base is a stone snake head. Life there was not all work and science, however. Chichén Itzá is home to the largest tlachtli (a type of sporting field) in the Americas. On that field the residents played a ritual ball game popular throughout pre-Columbian Mesoamerica.</p>
+                      <p class="card-text">Chichén Itzá is a Mayan city on the Yucatán Peninsula in Mexico, which flourished in the 9th and 10th centuries CE. Under the Mayan tribe Itzá—who were strongly influenced by the Toltecs—a number of important monuments and temples were built. Among the most notable is the stepped pyramid El Castillo (“The Castle”), which rises 79 feet (24 meters) above the Main Plaza. A testament to the Mayans’ astronomical abilities, the structure features a total of 365 steps, the number of days in the solar year. During the spring and autumnal equinoxes, the setting sun casts shadows on the pyramid that give the appearance of a serpent slithering down the north stairway; at the base is a stone snake head. Life there was not all work and science, however. Chichén Itzá is home to the largest tlachtli (a type of sporting field) in the Americas. On that field the residents played a ritual ball game popular throughout pre-Columbian Mesoamerica.</p>
                     </div>
                   </div>
                   <div class="col-lg-8">
-                    <img src="rss/chichen_itza.jpg" class="img-fluid rounded-start" alt="chichen_itza">
+                    <img src="rss/chichen_itza.jpg" class="img-fluid imgBox" alt="chichen_itza">
                   </div>
                 </div>
               </div>
         </div>
         <div class="row row-content">
-            <div class="card mb-3">
+            <div class="card mb-3 cardColor">
                 <div class="row g-0">
                   <div class="col-lg-8">
-                    <img src="rss/colosseum.jpg" class="img-fluid rounded-start" alt="colosseum">
+                    <img src="rss/colosseum.jpg" class="img-fluid imgBox" alt="colosseum">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
@@ -108,7 +109,7 @@
               </div>
         </div>
         <div class="row row-content">
-            <div class="card mb-3">
+            <div class="card mb-3 cardColor">
                 <div class="row g-0">
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
@@ -117,16 +118,16 @@
                     </div>
                   </div>
                   <div class="col-lg-8">
-                    <img src="rss/Machu_picchu.jpg" class="img-fluid rounded-start" alt="Machu_picchu">
+                    <img src="rss/machu_picchu.jpg" class="img-fluid imgBox" alt="Machu_picchu">
                   </div>
                 </div>
               </div>
         </div>
         <div class="row row-content">
-            <div class="card mb-3">
+            <div class="card mb-3 cardColor">
                 <div class="row g-0">
                   <div class="col-lg-8">
-                    <img src="rss/christ_the_redeemer.jpg" class="img-fluid rounded-start" alt="christ_the_redeemer">
+                    <img src="rss/christ_the_redeemer.jpg" class="img-fluid imgBox" alt="christ_the_redeemer">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
@@ -138,25 +139,25 @@
               </div>
         </div>
         <div class="row row-content">
-            <div class="card mb-3">
+            <div class="card mb-3 cardColor">
                 <div class="row g-0">
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
                       <h2 class="card-title"><strong>Petra</strong></h2>
-                      <p class="card-text">The ancient city of Petra, Jordan, is located in a remote valley, nestled among sandstone mountains and cliffs. It was purported to be one of the places where Moses struck a rock and water gushed forth. Later the Nabataeans, an Arab tribe, made it their capital, and during this time it flourished, becoming an important trade center, especially for spices. Noted carvers, the Nabataeans chiseled dwellings, temples, and tombs into the sandstone, which changed color with the shifting sun. In addition, they constructed a water system that allowed for lush gardens and farming. At its height, Petra reportedly had a population of 30,000. The city began to decline, however, as trade routes shifted. A major earthquake in 363 CE caused more difficulty, and after another tremor hit in 551, Petra was gradually abandoned. Although rediscovered in 1912, it was largely ignored by archaeologists until the late 20th century, and many questions remain about the city.</p>
+                      <p class="card-text">The ancient city of Petra, Jordan, is located in a remote valley, nestled among sandstone mountains and cliffs. It was purported to be one of the places where Moses struck a rock and water gushed forth. Later the Nabataeans, an Arab tribe, made it their capital, and during this time it flourished, becoming an important trade center, especially for spices. Noted carvers, the Nabataeans chiseled dwellings, temples, and tombs into the sandstone, which changed color with the shifting sun. In addition, they constructed a water system that allowed for lush gardens and farming. At its height, Petra reportedly had a population of 30,000. The city began to decline, however, as trade routes shifted. A major earthquake in 363 CE caused more difficulty, and after another tremor hit in 551, Petra was gradually abandoned.</p>
                     </div>
                   </div>
                   <div class="col-lg-8">
-                    <img src="rss/petra.jpg" class="img-fluid rounded-start" alt="petra">
+                    <img src="rss/petra.jpg" class="img-fluid imgBox" alt="petra">
                   </div>
                 </div>
               </div>
         </div>
         <div class="row row-content">
-            <div class="card mb-3">
+            <div class="card mb-3 cardColor">
                 <div class="row g-0">
                   <div class="col-lg-8">
-                    <img src="rss/TajMahal.jpg" class="img-fluid rounded-start" alt="TajMahal">
+                    <img src="rss/tajmahal.jpg" class="img-fluid imgBox" alt="TajMahal">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
@@ -168,7 +169,7 @@
               </div>
         </div>
     </div>
-    <footer>
+    <footer class="footColor">
         <div class="container">
             <div class="row justify-content-center py-4">
                 Copyright &copy;Vivek Kumar.Inc
