--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="rss/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css">
     <title>Wonders of the world</title>
 </head>
@@ -17,10 +18,10 @@
             </button>
             <div class="collapse navbar-collapse custom-nav justify-content-end pe-4" id="Navbar">
                 <ul class ="navbar-nav">
-                    <li class="nav-item active"><a href="index.html" class="nav-link active">Home</a></li>
-                    <li class="nav-item"><a href="bookings.html" class="nav-link">Booking</a></li>
-                    <li class="nav-item"><a href="more.html" class="nav-link">More...</a></li>
-                    <li class="nav-item"><a href="aboutus.html" class="nav-link">About Us</a></li>
+                    <li class="nav-item active"><a href="index.html" class="nav-link active"><span class="fa fa-home pe-2"></span>Home</a></li>
+                    <li class="nav-item"><a href="bookings.html" class="nav-link"><span class="fa fa-location-arrow pe-2"></span>Booking</a></li>
+                    <li class="nav-item"><a href="more.html" class="nav-link"><span class="fa fa-file-medical pe-2"></span>More...</a></li>
+                    <li class="nav-item"><a href="contactus.html" class="nav-link"><span class="fa fa-phone-alt pe-2"></span>Contact Us</a></li>
                 </ul>
             </div>
         </div>
