--- a/contactus.html
+++ b/contactus.html
@@ -26,19 +26,19 @@
             </div>
         </div>
     </nav>
-    <div class="container py-5 my-4">
-        <h2>Contact Us</h2>
-        <div class="row">
+    <div class="container pt-5 my-5">
+        <div class="card p-5">
+          <h2><strong>Your Feedback</strong></h2>
         <form>
             <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3">
+              <label for="emailId" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-8">
+                  <input type="email" class="form-control" id="emailId" required>
                 </div>
             </div>
             <div class="row mb-3">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Your Query:</label>
-              <div class="col-sm-10">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Feedback:</label>
+              <div class="col-sm-8">
                 <textarea name="" class="col-sm-10 col-form-label" id="" cols="" rows="5"></textarea>
               </div>
             </div>
@@ -70,12 +70,14 @@
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="gridCheck1">
                   <label class="form-check-label" for="gridCheck1">
-                    Very Helpful
+                    Good UI/UX
                   </label>
                 </div>
               </div>
             </div>
+            <div class="d-flex col-12 justify-content-center pt-3">
             <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
         </form>
         </div>
     </div>
