--- a/contactus.html
+++ b/contactus.html
@@ -26,20 +26,20 @@
             </div>
         </div>
     </nav>
-    <div class="container pt-5 my-5">
-        <div class="card p-5">
-          <h2><strong>Your Feedback</strong></h2>
-        <form>
+    <div class="container pt-5 my-5"> 
+        <div class="card py-5 px-2">
+          <h2 class="px-2"><strong>Your Feedback</strong></h2>
+        <form class="needs-validation" onsubmit="event.preventDefault(); return onSubmit()">
             <div class="row mb-3">
               <label for="emailId" class="col-sm-2 col-form-label">Email</label>
               <div class="col-sm-8">
                   <input type="email" class="form-control" id="emailId" required>
-                </div>
+              </div>
             </div>
             <div class="row mb-3">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Feedback:</label>
+                <label for="feedback" class="col-sm-2 col-form-label">Feedback:</label>
               <div class="col-sm-8">
-                <textarea name="" class="col-sm-10 col-form-label" id="" cols="" rows="5"></textarea>
+                <textarea name="feedback" class="col-12 col-form-label p-2" id="feedback" cols="" rows="5"></textarea>
               </div>
             </div>
             <fieldset class="row mb-3">
@@ -57,7 +57,7 @@
                     Satisfying and Informative
                   </label>
                 </div>
-                <div class="form-check disabled">
+                <div class="form-check">
                   <input class="form-check-input" type="checkbox" name="gridcheckboxs" id="gridcheckboxs3" value="option3">
                   <label class="form-check-label" for="gridcheckboxs3">
                     Need much improvement
@@ -76,11 +76,12 @@
               </div>
             </div>
             <div class="d-flex col-12 justify-content-center pt-3">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary" type="submit">Submit</button>
           </div>
         </form>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="./submit.js"></script>
 </body>
 </html>
