fix: :bug: fixed image rendering

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="card mb-3 cardColor">
                 <div class="row g-0">
                   <div class="col-lg-8">
-                    <img src="rss/tajmahal.jpg" class="img-fluid imgBox" alt="TajMahal">
+                    <img src="rss/TajMahal.jpg" class="img-fluid imgBox" alt="TajMahal">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="card-body">
